# ros_optitrack

aruco_mapping/data/: bebop2_camera_calib.ini  bebop_camera_calib.ini
aruco_mapping/launch/: aruco_mapping.launch
controllers/: CMakeLists.txt
controllers/cfg/: setDIT2FLC.cfg  setPID.cfg  setSIT2FLC.cfg  setTrajectory.cfg
controllers/include/controllers/: DIT2FLC.h  PID.h  SIT2FLC.h  logger.h  q_learning.h~  safeBebop.h  trajectory.h
controllers/launch/: control_bebop.launch  dit2flc.launch  dit2flc.launch~  pid.launch  pid.launch~  q_learning.launch~  se3_controller.launch  se3_controller.launch~  sit2flc.launch  sit2flc.launch~  t1flc.launch  t1flc.launch~  vtol_with_q_learning.launch  vtol_with_q_learning.launch~
controllers/policy/: waypoints.txt
controllers/src/: DIT2FLC.cpp  PID.cpp  SIT2FLC.cpp  logger.cpp  safeBebop.cpp  teleopKey.cpp  trajectory.cpp
fuzzy_logic_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fuzzy_logic_controller/cfg/: setController.cfg  setController.cfg~
fuzzy_logic_controller/include/: Ciao.h~
fuzzy_logic_controller/include/fl/: Headers.h  VelocityController.h
fuzzy_logic_controller/include/fl/controllers/: CentroidNonSingletonFuzzyLogicController.h  FuzzyLogicController.h  SingletonFuzzyLogicController.h  StandardNonSingletonFuzzyLogicController.h
fuzzy_logic_controller/launch/: velocity_controller (copy).launch~  velocity_controller.launch  velocity_controller.launch~  velocity_controller_with_wind.launch
fuzzy_logic_controller/src/: VelocityController.cpp
fuzzy_logic_controller/src/controllers/: CentroidNonSingletonFuzzyLogicController.cpp  FuzzyLogicController.cpp  SingletonFuzzyLogicController.cpp  StandardNonSingletonFuzzyLogicController.cpp
fuzzy_logic_controller/src/variable/: InputVariable.cpp
gps_common/src/: utm_odometry_node.cpp
