<?xml version="1.0"?>
<package>
  <name>fuzzy_logic_controller</name>
  <version>0.0.0</version>
  <description>The fuzzy logic controller package</description>

  <maintainer email="andriy001@e.ntu.edu.sg">Sarabakha Andriy</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
